Добавлен UDP клиент для службы daytime

--- a/daytime/Makefile
+++ b/daytime/Makefile
@@ -1,15 +1,17 @@
-CXX = g++
-CXXFLAGS = -std=c++11
+CC = gcc
+CFLAGS = -Wall -std=c99
 TARGET = daytime
 SOURCES = daytime.cpp
 
+all: $(TARGET)
+
 $(TARGET): $(SOURCES)
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(SOURCES)
+	$(CC) $(CFLAGS) -o $(TARGET) $(SOURCES)
 
 clean:
 	rm -f $(TARGET)
 
-test:
-	./$(TARGET) 172.16.40.1
+test: $(TARGET)
+	./$(TARGET) time.nist.gov
 
-.PHONY: clean test
+.PHONY: all clean test
